# Hipare-Reaper-agent

./: .env.example  .gitignore  LICENSE  README.md  audio_analyzer.py  package-lock.json  package.json  reaper_bridge.py  server.js
knowledge/: reapy-commands.md
knowledge/knowledge/artists/: band-member-mapping.md  bands-production.md  bassists.md  drummers.md  guitarists-part1.md  guitarists-part2.md  keyboardists.md  vocalists.md
knowledge/knowledge/core/: compression-guide.md  eq-guide.md  mastering-basics.md  reverb-delay.md  signal-chain.md  terminology-fi-en.md
knowledge/knowledge/genres/: blues.md  electronic.md  hiphop-rap.md  jazz.md  metal.md  orchestral.md  pop.md  rock.md
knowledge/knowledge/huolto/: hipare-guide.md
knowledge/knowledge/plugins/: free-essentials.md  free-vst-resources.md  vst-descriptions.md
knowledge/knowledge/reaper/: dsl-commands.md  mixing-mastering-guide.md  reaper-actions-reference.md  reaper-comprehensive-guide.md  recording-guide.md  troubleshooting-guide.md
knowledge/knowledge/studio-setup/: audio-interfaces.md  bass.md  guitars.md  keyboards.md  microphones.md  recording-ai-guide.md
knowledge/knowledge/workflows/: audio-restoration.md  live-recording.md  loudness-delivery.md  podcast-production.md  reamping.md  (+3 more)
public/: index.html
public/css/: styles.css
public/js/: app.js
public/locales/: en.json  fi.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
total-reaper-mcp/total-reaper-mcp-main/: connect_to_relay.py  run_with_relay.py
(+6 files in other folders)
