[package]
name = "hipare"
version = "2.0.0"
description = "Hipare - AI Assistant for REAPER DAW"
authors = ["Hipare"]
edition = "2021"

[lib]
name = "hipare_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["blocking"] }
